--- a/wsgi/openshift/templates/bz/config.html
+++ b/wsgi/openshift/templates/bz/config.html
@@ -23,6 +23,7 @@
                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                            <li><a href="/saved">Saved Searches</a></li>
+                           <li><a href="/compliance">Compliance</a></li>
                         </ul>                        
                   </li>
 
