--- a/wsgi/openshift/templates/bz/add_req/modal.html
+++ b/wsgi/openshift/templates/bz/add_req/modal.html
@@ -32,8 +32,7 @@
 
                      <select id="{{ requirement_type }}-function" class="form-control"
                         onchange="modal_expression('{{ requirement_type }}');">
-                        <option selected></option>
-                        <option value="matches">Matches</option>
+                        <option selected value="matches">Matches</option>
                      </select>      
                   </div>
                {% endif %}
@@ -64,8 +63,7 @@
 
                      <select id="{{ requirement_type }}-function" class="form-control"
                         onchange="modal_expression('{{ requirement_type }}');">
-                        <option selected></option>
-                        <option value="matches">Matches</option>
+                        <option selected value="matches">Matches</option>
                      </select>      
                   </div>
                {% endif %}
@@ -88,8 +86,7 @@
 
                      <select id="{{ requirement_type }}-function" class="form-control"
                         onchange="modal_expression('{{ requirement_type }}');">
-                        <option selected></option>
-                        <option value="matches">Matches</option>
+                        <option selected value="matches">Matches</option>
                      </select>      
                   </div>
                {% endif %}
@@ -130,8 +127,7 @@
                      <label for="function">Function Type</label>
 
                      <select id="{{ requirement_type.split|join:"_" }}-function" class="form-control">
-                        <option selected></option>
-                        <option value="matches">Matches</option>
+                        <option selected value="matches">Matches</option>
                         <option value="contains">Contains</option>
                         <option value="isContainedIn">isContainedIn</option>
                         <option value="sizeIs">sizeIs</option>
