--- a/wsgi/openshift/templates/bz/core/base.html
+++ b/wsgi/openshift/templates/bz/core/base.html
@@ -17,7 +17,7 @@
 
       <div class="container" id="config-menu" style="display:none">
          {% block config %}
-               {% include "bz/config.html" %}
+               {% include "bz/core/config.html" %}
          {% endblock %}
       </div>
 
