--- a/wsgi/openshift/templates/bz/core/main.html
+++ b/wsgi/openshift/templates/bz/core/main.html
@@ -1,8 +1,8 @@
-{% extends "bz/base.html" %}
+{% extends "bz/core/base.html" %}
 {% block main %}
    
    {% block content %}
-      {% include "bz/home.html" %} 
+      {% include "bz/core/home.html" %} 
    {% endblock %}
 
 {% endblock %}
