--- a/wsgi/openshift/templates/bz/products/add_product.html
+++ b/wsgi/openshift/templates/bz/products/add_product.html
@@ -7,7 +7,7 @@
          </div>
          <div class="modal-body">
             <div class="row">
-               <form method="post" id="myform">{% csrf_token %}
+               <form method="post" id="myform" action="/compliance">{% csrf_token %}
                <div class="col-md-12">
                   <div class="row" style="padding: 5px">
                      <div class="col-md-12">
